--- a/data/ETL Pipeline Preparation.ipynb
+++ b/data/ETL Pipeline Preparation.ipynb
@@ -1433,13 +1433,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "engine = create_engine('sqlite:///InsertDatabaseName.db')\n",
+    "engine = create_engine('sqlite:///DisasterResponse.db')\n",
     "df.to_sql('df_table', engine, index=False)"
    ]
   },
