--- a/models/ML Pipeline Preparation.ipynb
+++ b/models/ML Pipeline Preparation.ipynb
@@ -15,16 +15,106 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import os\n",
+    "\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "from sqlalchemy import create_engine"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        Weather update - a cold front from Cuba that c...\n",
+       "1                  Is the Hurricane over or is it not over\n",
+       "2                          Looking for someone but no name\n",
+       "3        UN reports Leogane 80-90 destroyed. Only Hospi...\n",
+       "4        says: west side of Haiti, rest of the country ...\n",
+       "5                   Information about the National Palace-\n",
+       "6                           Storm at sacred heart of jesus\n",
+       "7        Please, we need tents and water. We are in Sil...\n",
+       "8          I would like to receive the messages, thank you\n",
+       "9        I am in Croix-des-Bouquets. We have health iss...\n",
+       "10       There's nothing to eat and water, we starving ...\n",
+       "11       I am in Petionville. I need more information r...\n",
+       "12       I am in Thomassin number 32, in the area named...\n",
+       "13       Let's do it together, need food in Delma 75, i...\n",
+       "14       More information on the 4636 number in order f...\n",
+       "15       A Comitee in Delmas 19, Rue ( street ) Janvier...\n",
+       "16       We need food and water in Klecin 12. We are dy...\n",
+       "17       are you going to call me or do you want me to ...\n",
+       "18          I don't understand how to use this thing 4636.\n",
+       "19       I would like to know if the earthquake is over...\n",
+       "20       I would like to know if one of the radio ginen...\n",
+       "21                          I'm in Laplaine, I am a victim\n",
+       "22       There's a lack of water in Moleya, please info...\n",
+       "23       Those people who live at Sibert need food they...\n",
+       "24       I want to say hello, my message is to let you ...\n",
+       "25                      Can you tell me about this service\n",
+       "26       People I'm at Delma 2, we don't anything what ...\n",
+       "27       We are at Gressier we needs assistance right a...\n",
+       "28       How can we get water and food in Fontamara 43 ...\n",
+       "29       We need help. Carrefour has been forgotten com...\n",
+       "                               ...                        \n",
+       "26186    The ability to pick dengue from influenza is c...\n",
+       "26187    A Federation chartered ship arrived from Lae w...\n",
+       "26188    The result is that in Aceh province many prefa...\n",
+       "26189    Otherwise, the risk is families fleeing again ...\n",
+       "26190    A United Nations team from the Electoral Assis...\n",
+       "26191    Senegal and Guinea-Bissau have agreed to condu...\n",
+       "26192    The President said that her Government always ...\n",
+       "26193    It was decided that all vehicle movement from ...\n",
+       "26194    The tendency to link deforestation with large ...\n",
+       "26195    Polio is a viral disease that attacks the nerv...\n",
+       "26196    The new constitution declares that 'Somalia is...\n",
+       "26197    We're providing clean water to people who woul...\n",
+       "26198    Relief items include towels, sanitary napkins,...\n",
+       "26199    In Aceh's Meulaboh town the UN refugee agency ...\n",
+       "26200    WHO is recruiting a sanitary engineer / consul...\n",
+       "26201    Following the severe floods which occurred ove...\n",
+       "26202    The closure has stopped 169 inbound flights an...\n",
+       "26203    BANGKOK, 24 January 2012 (NNT) - Prime Ministe...\n",
+       "26204    Cadmium, a metallic element widely used in bat...\n",
+       "26205    Epidemic surveillance: National Institute of C...\n",
+       "26206    2.1 Due to sporadic skirmishes in eastern D.R....\n",
+       "26207    No other army had gone to greater lengths to a...\n",
+       "26208    The delivery was made in conjunction with the ...\n",
+       "26209    However while ECOWAS wanted him to lead a 12-m...\n",
+       "26210    Hpakant, an area rich with coveted jade stones...\n",
+       "26211    The training demonstrated how to enhance micro...\n",
+       "26212    A suitable candidate has been selected and OCH...\n",
+       "26213    Proshika, operating in Cox's Bazar municipalit...\n",
+       "26214    Some 2,000 women protesting against the conduc...\n",
+       "26215    A radical shift in thinking came about as a re...\n",
+       "Name: message, dtype: object"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# load data from database\n",
+    "engine = create_engine('sqlite:///../data/DisasterResponse.db')\n",
+    "df = pd.read_sql_table('df_table',engine)\n",
+    "X = df['message']\n",
+    "Y = df.iloc[:,4:]\n",
+    "X"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -35,10 +125,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "def tokenize(text):\n",
+    "    url_regex = 'http[s]?://(?:[a-zA-Z]|[0-9]|[$-_@.&+]|[!*\\(\\),]|(?:%[0-9a-fA-F][0-9a-fA-F]))+'\n",
+    "    detected_urls = re.findall(url_regex, text)\n",
+    "    for url in detected_urls:\n",
+    "        text = text.replace(url, \"urlplaceholder\")\n",
+    "\n",
+    "    tokens = word_tokenize(text)\n",
+    "    lemmatizer = WordNetLemmatizer()\n",
+    "\n",
+    "    clean_tokens = []\n",
+    "    for tok in tokens:\n",
+    "        clean_tok = lemmatizer.lemmatize(tok).lower().strip()\n",
+    "        clean_tokens.append(clean_tok)\n",
+    "\n",
+    "    return clean_tokens"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -51,7 +159,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -67,7 +177,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -82,7 +194,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -97,7 +211,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "parameters = \n",
@@ -118,7 +234,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -134,7 +252,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -148,7 +268,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -163,14 +285,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -184,7 +308,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
