--- a/models/ML Pipeline Preparation.ipynb
+++ b/models/ML Pipeline Preparation.ipynb
@@ -3587,10 +3587,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# save the model to disk\n",
+    "filename = 'classifier_pkl'\n",
+    "pickle.dump(cv, open(filename, 'wb'))"
+   ]
   },
   {
    "cell_type": "markdown",
